[gd_scene format=3 uid="uid://bmhoypmjw5p2j"]

[ext_resource type="Script" uid="uid://jnbxkfifxv0v" path="res://scripts/quiz.gd" id="1_36y45"]
[ext_resource type="Texture2D" uid="uid://bhrc2465eirc5" path="res://bg_images/white-crinkled-paper-texture-background.jpg" id="2_3bubg"]
[ext_resource type="FontFile" uid="uid://b5wtg44ghykfr" path="res://fonts/SpaceGrotesk-SemiBold.ttf" id="3_w5ac1"]
[ext_resource type="FontFile" uid="uid://b3dea1eyqyr6c" path="res://fonts/SpaceGrotesk-Bold.ttf" id="4_m81w7"]
[ext_resource type="Texture2D" uid="uid://2xwjl8unqn0w" path="res://bg_images/browm-paper.jpg" id="4_w5ac1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w5ac1"]
texture = ExtResource("4_w5ac1")

[sub_resource type="Theme" id="Theme_m81w7"]
ProgressBar/styles/fill = SubResource("StyleBoxTexture_w5ac1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xq7j8"]
texture = ExtResource("4_w5ac1")

[sub_resource type="Theme" id="Theme_bn6h1"]
ProgressBar/styles/fill = SubResource("StyleBoxTexture_xq7j8")

[node name="quiz" type="Control" unique_id=1469686499]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_36y45")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1839699070]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3bubg")

[node name="lifebar" type="HBoxContainer" parent="." unique_id=147458700]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036000002
anchor_top = 0.029000001
anchor_right = 0.966
anchor_bottom = 0.113000005
offset_left = 0.52799606
offset_top = 0.20800018
offset_right = 0.16796875
offset_bottom = -0.22400665
metadata/_edit_use_anchors_ = true

[node name="player" type="VBoxContainer" parent="lifebar" unique_id=1983102558]
layout_mode = 2
size_flags_horizontal = 3

[node name="lifebar" type="ProgressBar" parent="lifebar/player" unique_id=896923086]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_m81w7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_w5ac1")
value = 30.0
show_percentage = false

[node name="label" type="Label" parent="lifebar/player" unique_id=1345915681]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_w5ac1")
theme_override_font_sizes/font_size = 26
text = "Player"

[node name="boss" type="VBoxContainer" parent="lifebar" unique_id=1580256713]
layout_mode = 2
size_flags_horizontal = 3

[node name="lifebar" type="ProgressBar" parent="lifebar/boss" unique_id=757536255]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_bn6h1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_w5ac1")
value = 5.0
show_percentage = false

[node name="label" type="Label" parent="lifebar/boss" unique_id=443275484]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_w5ac1")
theme_override_font_sizes/font_size = 26
text = "Boss"
horizontal_alignment = 2

[node name="question" type="VBoxContainer" parent="." unique_id=1657616223]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.034340277
anchor_top = 0.23579012
anchor_right = 0.980757
anchor_bottom = 0.5228025
offset_left = -0.5600014
offset_top = 0.20800018
offset_right = 0.16796875
offset_bottom = 0.2239914
metadata/_edit_use_anchors_ = true

[node name="richtext_label" type="RichTextLabel" parent="question" unique_id=1606957322]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_w5ac1")
theme_override_fonts/bold_font = ExtResource("4_m81w7")
theme_override_fonts/bold_italics_font = ExtResource("4_m81w7")
theme_override_fonts/italics_font = ExtResource("3_w5ac1")
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/bold_font_size = 26
theme_override_font_sizes/bold_italics_font_size = 26
theme_override_font_sizes/italics_font_size = 26
theme_override_font_sizes/mono_font_size = 26
bbcode_enabled = true
fit_content = true

[node name="answer_input" type="LineEdit" parent="question" unique_id=2031171122]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_w5ac1")
theme_override_font_sizes/font_size = 26

[node name="options" type="HBoxContainer" parent="question" unique_id=95251632]
layout_mode = 2

[node name="button_a" type="Button" parent="question/options" unique_id=1678191619]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("3_w5ac1")
theme_override_font_sizes/font_size = 26
text = "A"

[node name="button_b" type="Button" parent="question/options" unique_id=1229387690]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("3_w5ac1")
theme_override_font_sizes/font_size = 26
text = "B"

[node name="button_c" type="Button" parent="question/options" unique_id=174820149]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("3_w5ac1")
theme_override_font_sizes/font_size = 26
text = "C"

[node name="button_d" type="Button" parent="question/options" unique_id=1671817456]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_fonts/font = ExtResource("3_w5ac1")
theme_override_font_sizes/font_size = 26
text = "D"

[connection signal="text_submitted" from="question/answer_input" to="." method="_on_answer_input_text_submitted"]
[connection signal="mouse_entered" from="question/options/button_a" to="." method="_on_button_a_mouse_entered"]
[connection signal="pressed" from="question/options/button_a" to="." method="_on_button_a_pressed"]
[connection signal="mouse_entered" from="question/options/button_b" to="." method="_on_button_b_mouse_entered"]
[connection signal="pressed" from="question/options/button_b" to="." method="_on_button_b_pressed"]
[connection signal="mouse_entered" from="question/options/button_c" to="." method="_on_button_c_mouse_entered"]
[connection signal="pressed" from="question/options/button_c" to="." method="_on_button_c_pressed"]
[connection signal="mouse_entered" from="question/options/button_d" to="." method="_on_button_d_mouse_entered"]
[connection signal="pressed" from="question/options/button_d" to="." method="_on_button_d_pressed"]
